--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,13 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "owen-it/laravel-auditing": "13.7",
+        "reliese/laravel": "^1.4",
         "spatie/laravel-activitylog": "^4.9",
         "spatie/laravel-permission": "^6.10",
         "tymon/jwt-auth": "^2.1"
     },
     "require-dev": {
+        "beyondcode/laravel-er-diagram-generator": "^4.0",
         "fakerphp/faker": "^1.9.1",
         "laravel-lang/lang": "14.0",
         "laravel/pint": "^1.0",
